retest connexion 6.0